syntax = "proto3";

import "google/protobuf/timestamp.proto";

package RuntimeAbstractionDemo;

// Agent state for the demo
message DemoAgentState {
    string name = 1;
    int32 message_count = 2;
    google.protobuf.Timestamp last_update = 3;
    string runtime_type = 4;
}

// Events for the demo
message HelloEvent {
    string sender = 1;
    string message = 2;
    google.protobuf.Timestamp timestamp = 3;
}

message WorkRequestEvent {
    string task_id = 1;
    string description = 2;
    int32 priority = 3;
}

message WorkCompletedEvent {
    string task_id = 1;
    string worker_id = 2;
    bool success = 3;
    string result = 4;
}
